--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "type": "git",
     "url": "https://github.com/ecarter/quizshow.git"
   },
+  "scripts": {
+    "start": "node app"
+  },
   "dependencies": {
     "express": "*",
+    "jade": "*",
     "socket.io": "*"
   },
   "keywords": [
