--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "*",
     "jade": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "mongoose": "*"
   },
   "keywords": [
     "quiz",
