--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quizshow",
   "version": "0.0.1",
-  "description": "collaborative realtime quiz",
+  "description": "a collaborative realtime quiz show",
   "repository": {
     "type": "git",
     "url": "https://github.com/ecarter/quizshow.git"
